--- a/projects/02-mouse-follower/src/index.css
+++ b/projects/02-mouse-follower/src/index.css
@@ -19,6 +19,7 @@ a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
+  
 }
 
 a:hover {
@@ -42,6 +43,7 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
+  margin: 5px;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
